/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-07-25 05:55 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/mainwin.c
  * source/vm/hvm.c
    ! Open Watcom does not require hb_forceLinkMainWin() to be force-linked,
    condition is hence removed.

  * winmake/makefile.wc
    ! explicitely use mainstd.obj as startup
    ! remove mainstd.obj and mainwin.obj as vm.lib members

  * utils/hbdoc/hbdoc.prg
  * utils/hbmake/hbmake.prg
  * utils/hbtest/hbtest.prg
    ! MAIN -> _APPMAIN

  /*
    This in effect removes long-time-hack to known Windows compilers with
    regards to force linking of hb_forceLinkMainWin()
  */

2012-07-25 02:22 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/mainwin.c
  * source/vm/hvm.c
    ! Digital Mars does not require hb_forceLinkMainWin() to be force-linked,
    condition is hence removed.

  * winmake/makefile.dc
    ! explicitely use mainstd.obj as startup
    ! remove mainstd.obj and mainwin.obj as vm.lib members

2012-07-24 07:18 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/mainwin.c
    - remove debugging trace

2012-07-23 22:45 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/mainwin.c
  * source/vm/hvm.c
    ! MINGW32 does not require hb_forceLinkMainWin() to be force-linked,
    condition is hence removed.

  * winmake/compile.mak
  * winmake/makefile.gc
    ! remove mainstd and mainwin as library members of MINGW's vm.lib due
    to the fact that in GUI mode, MINGW (eg. ver 4.7.1 of nuwen.net) sometimes
    fails to use mainwin as startup, IOW MINGW always searches for main() which
    is in mainstd.c. This results in a non-initialization of GUI handles which
    throw an error of non-GUI program although appropriate flags have been
    assigned to MINGW's linker. This configuration is IMHO a correct and very