@@ -603,6 +603,10 @@ $(HARBOUR_DLL) : $(HARBOUR_DLL_OBJS)
 !elif ("$(__BLD__)"=="CONTRIB_BLD")
 #*******************************************************************************
 
+!ifndef HB_NO_VM_ALL
+CLIBFLAGS    =-DHB_VM_ALL $(CLIBFLAGS)
+!endif
+
 #===============================================================================
 # Append your own build flags here
 #===============================================================================
