@@ -532,6 +532,10 @@ $(HARBOUR_DLL_OBJS),$@,,,$(EXPORT_DEF)
 HARBOURFLAGS=$(HARBOURFLAGS)
 CLIBFLAGS   =$(CLIBFLAGS)
 
+!ifndef HB_NO_VM_ALL
+CLIBFLAGS    =-D"HB_VM_ALL" $(CLIBFLAGS)
+!endif
+
 #===============================================================================
 # C compiler definition and C flags. These should never have to change.
 #===============================================================================
